welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:12: error: not found: value incide
  return incide
         ^